ajustes no css e no javascript

--- a/index.html
+++ b/index.html
@@ -8,35 +8,36 @@
     <title>Calculadora</title>
 </head>
 <body>
-    <div class="corpo">
+    <div class="corpo" onclick="valor()">
         <div class="visor"></div>
         <div class="tecla">
-            <div class="teclas esquerda">√</div>
-            <div class="teclas">x²</div>
-            <div class="teclas">C</div>
-            <div class="teclas">÷</div>        
+            <button class="teclas esquerda" value="√">√</button>
+            <button class="teclas" value="x²">x²</button>
+            <button class="teclas" value="x²">C</button>
+            <button class="teclas" value="÷">÷</button>        
 
 
-            <div class="teclas esquerda">9</div>
-            <div class="teclas">8</div>
-            <div class="teclas">7</div>
-            <div class="teclas">x</div>
+            <button class="teclas esquerda" value="9">9</button>
+            <button class="teclas" value="8">8</button>
+            <button class="teclas" value="7">7</button>
+            <button class="teclas" value="x">x</button>
 
-            <div class="teclas esquerda">4</div>
-            <div class="teclas">5</div>
-            <div class="teclas">6</div>
-            <div class="teclas">+</div>
+            <button class="teclas esquerda" value="4">4</button>
+            <button class="teclas" value="5">5</button>
+            <button class="teclas" value="6">6</button>
+            <button class="teclas" value="+">+</button>
 
-            <div class="teclas esquerda">1</div>
-            <div class="teclas">2</div>
-            <div class="teclas">3</div>
-            <div class="teclas">-</div>
+            <button class="teclas esquerda" value="1">1</button>
+            <button class="teclas" value="2">2</button>
+            <button class="teclas" value="3">3</button>
+            <button class="teclas" value="-">-</button>
 
-            <div class="teclas esquerda" style="border-radius: 0px 0px 0px 10px">,</div>
-            <div class="teclas">0</div>
-            <div class="teclas">←</div>
-            <div class="teclas" style="border-radius: 0px 0px 10px 0px">=</div>
+            <button class="teclas esquerda" style="border-radius: 0px 0px 0px 10px">,</button>
+            <button class="teclas">0</button>
+            <button class="teclas">←</button>
+            <button class="teclas" style="border-radius: 0px 0px 10px 0px">=</button>
     </div>
     </div>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
