criando novas funções

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="visor"></div>
         <div class="tecla">
             <button class="teclas esquerda" value="√">√</button>
-            <button class="teclas" value="x²">x²</button>
-            <button class="teclas" value="x²" onclick="limpar()">C</button>
-            <button class="teclas" value="÷">÷</button>        
+            <button class="teclas">x²</button>
+            <button class="teclas" onclick="limpar()">C</button>
+            <button class="teclas">÷</button>        
 
 
             <button class="teclas esquerda" onclick="adicionar(9)">9</button>
@@ -25,7 +25,7 @@
             <button class="teclas esquerda" onclick="adicionar(4)">4</button>
             <button class="teclas" onclick="adicionar(5)">5</button>
             <button class="teclas" onclick="adicionar(6)">6</button>
-            <button class="teclas">+</button>
+            <button class="teclas" id="soma">+</button>
 
             <button class="teclas esquerda" onclick="adicionar(1)">1</button>
             <button class="teclas" onclick="adicionar(2)">2</button>
