new dividers on html with adjust in css and js

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="corpo">
-        <div class="visor"></div>
+        <div class="visor">
+            <span class="visor-text"></span>
+            <span class="antecessor"></span>
+        </div>
         <div class="tecla">
             <button class="teclas esquerda" onclick="operation(5)">√</button>
             <button class="teclas" onclick="operation(4)">x²</button>
@@ -38,5 +41,6 @@
     </div>
     </div>
     <script src="scripts/script.js"></script>
+    <script src="scripts/teste.js"></script>
 </body>
 </html>
