--- a/index.html
+++ b/index.html
@@ -34,13 +34,12 @@
             <button class="teclas" onclick="adicionar(3)">3</button>
             <button class="teclas" onclick="operation(1)">-</button>
 
-            <button class="teclas esquerda" style="border-radius: 0px 0px 0px 10px">,</button>
+            <button class="teclas esquerda" onclick="adicionar(10)" style="border-radius: 0px 0px 0px 10px">,</button>
             <button class="teclas" onclick="adicionar(0)">0</button>
-            <button class="teclas" onclick="back()">←</button>
+            <button class="teclas" onclick="backspace()">←</button>
             <button class="teclas" onclick="result()" style="border-radius: 0px 0px 10px 0px">=</button>
     </div>
     </div>
     <script src="scripts/script.js"></script>
-    <script src="scripts/teste.js"></script>
 </body>
 </html>
